force-app/main/default/objects/ServiceContractNewMatterAgency__c/ServiceContractNewMatterAgency__c.object-meta.xml
<CustomObject>
    <label>サービス_新規(不動産)</label>
    <nameField>
        <label>サービス_新規(不動産)</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>