force-app/main/default/objects/ServiceContractNewMatterAgency__c/fields/ContractPossibleUpperLimit__c.field-meta.xml
<CustomField>
    <fullName>ContractPossibleUpperLimit__c</fullName>
    <label>契約可能上限</label>
    <type>TextArea</type>
</CustomField>