force-app/main/default/objects/ServiceContractNewMatterAgency__c/fields/ContractStartDateBasic__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDateBasic__c</fullName>
    <label>契約開始日（基本）</label>
    <type>Date</type>
</CustomField>