force-app/main/default/objects/ServiceContractNewMatterAgency__c/fields/ContractStartDateTransferTermLimit__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDateTransferTermLimit__c</fullName>
    <label>契約開始日（異動期限定）</label>
    <type>Date</type>
</CustomField>