force-app/main/default/objects/ServiceContractNewMatterAgency__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>立地</label>
    <type>TextArea</type>
</CustomField>