force-app/main/default/objects/ServiceContractNewMatterAgency__c/fields/RentIncluding__c.field-meta.xml
<CustomField>
    <fullName>RentIncluding__c</fullName>
    <label>家賃に含むもの</label>
    <type>TextArea</type>
</CustomField>