force-app/main/default/objects/ServiceContractNewMatterAgency__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>構造</label>
    <type>TextArea</type>
</CustomField>